# chatx

./: .gitignore  CMakeLists.txt  Chat__Application.cpp  Chat__Application.h  Chat__Application.ui  README.md  bugs.md  chatPage.cpp  chatPage.h  login.cpp  login.h  login.ui  main.cpp  server.cpp  server.h  signup.cpp  signup.h  signup.ui
UI/: forgotpass.ui  login.ui  signup.ui
client/: client.cpp  client.h  message.cpp  message.h  room.cpp  room.h
db/: users_credentials.txt
db/rooms/: alaa@gmail.com_loki@gmail.com.txt  alaa@gmail.com_malak@gmail.com.txt  amed@gmail.com_hoss@gmail.com.txt  amed@gmail.com_loki@gmail.com.txt  ashraf@gmail.com_bassam@gmail.com.txt  ashraf@gmail.com_hoss@gmail.com.txt  ashraf@gmail.com_hossam@gmail.com.txt  ashraf@gmail.com_loki@gmail.com.txt  ashraf@gmail.com_yousef@gmail.com.txt  ayman@gmail.com_khalx@gmail.com.txt  ayman@gmail.com_loki@gmail.com.txt  bassam@gmail.com_hamdy@gmail.com.txt  bassam@gmail.com_khalx@gmail.com.txt  hamdy@gmail.com_khalx@gmail.com.txt  hamdy@gmail.com_loki@gmail.com.txt  hoss@gmail.com_loki@gmail.com.txt  hoss@gmail.com_malak@gmail.com.txt  hossam@gmail.com_malak@gmail.com.txt  khalx@gmail.com_loki@gmail.com.txt  loki@gmail.com_malak@gmail.com.txt  loki@gmail.com_remika@gmail.com.txt  loki@gmail.com_roka@gmail.com.txt
db/settings/: alaa@gmail.com_settings.txt  amed@gmail.com_settings.txt  ashraf@gmail.com_settings.txt  ayman@gmail.com_settings.txt  bassam@gmail.com_settings.txt  hamdy@gmail.com_settings.txt  hoss@gmail.com_settings.txt  hossam@gmail.com_settings.txt  khalx@gmail.com_settings.txt  loki@gmail.com_settings.txt  malak@gmail.com_settings.txt  qobesy@gmail.com_settings.txt  (+3 more)
headers/: Chat__Application.h  chatPage.h  forgotpass.h  login.h  signup.h
mocFiles/: moc_Chat__Application.cpp_parameters  moc_chatPage.cpp_parameters  moc_login.cpp_parameters  moc_server.cpp_parameters  moc_signup.cpp_parameters
server/: server.cpp  server.h
sourceFiles/: Chat__Application.cpp  chatPage.cpp  chatPage.h  forgotpass.cpp  login.cpp  signup.cpp
(+38 files in other folders)
